--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/dialog_hand_up_operate.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/dialog_hand_up_operate.xml
@@ -12,98 +12,136 @@
         android:layout_height="0dp"
         android:background="@drawable/shape_help_title"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tv_hand_cancel"
+        app:layout_constraintTop_toTopOf="@+id/cl_one"
         tools:layout_editor_absoluteX="1dp" />
 
-    <TextView
-        android:id="@+id/tv_video"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_one"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@id/cl_two">
+        <TextView
+            android:id="@+id/tv_video"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableTop="@drawable/svg_icon_video_open"
+            android:drawablePadding="@dimen/dimen_8dp"
+            android:gravity="center"
+            android:paddingTop="@dimen/dimen_30dp"
+            android:text="摄像头"
+            android:textColor="@color/color_26"
+            android:textSize="@dimen/dimen_14sp"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/tv_audio"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:ignore="UseCompatTextViewDrawableXml" />
+
+        <TextView
+            android:id="@+id/tv_audio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableTop="@drawable/svg_icon_audio_open"
+            android:drawablePadding="@dimen/dimen_8dp"
+            android:gravity="center"
+            android:paddingTop="@dimen/dimen_30dp"
+            android:text="麦克风"
+            android:textColor="@color/color_26"
+            android:textSize="@dimen/dimen_14sp"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/tv_camera"
+            app:layout_constraintStart_toEndOf="@id/tv_video"
+            tools:ignore="UseCompatTextViewDrawableXml" />
+
+        <TextView
+            android:id="@+id/tv_camera"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableTop="@drawable/svg_icon_camera"
+            android:drawablePadding="@dimen/dimen_8dp"
+            android:gravity="center"
+            android:paddingTop="@dimen/dimen_30dp"
+            android:text="相机"
+            android:textColor="@color/color_26"
+            android:textSize="@dimen/dimen_14sp"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/tv_hand_cancel"
+            app:layout_constraintStart_toEndOf="@id/tv_audio"
+            tools:ignore="UseCompatTextViewDrawableXml" />
+
+        <TextView
+            android:id="@+id/tv_hand_cancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableTop="@drawable/svg_icon_hand_pic"
+            android:drawablePadding="@dimen/dimen_8dp"
+            android:gravity="center"
+            android:paddingTop="@dimen/dimen_30dp"
+            android:text="下麦"
+            android:textColor="@color/color_26"
+            android:textSize="@dimen/dimen_14sp"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/tv_camera"
+            tools:ignore="UseCompatTextViewDrawableXml" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_two"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/dimen_45dp"
-        android:drawableTop="@drawable/svg_icon_video_open"
-        android:drawablePadding="@dimen/dimen_8dp"
-        android:gravity="center"
-        android:paddingTop="@dimen/dimen_30dp"
-        android:text="摄像头"
-        android:textColor="@color/color_26"
-        android:textSize="@dimen/dimen_14sp"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/tv_audio"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="UseCompatTextViewDrawableXml" />
-
-    <TextView
-        android:id="@+id/tv_audio"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/dimen_45dp"
-        android:drawableTop="@drawable/svg_icon_audio_open"
-        android:drawablePadding="@dimen/dimen_8dp"
-        android:gravity="center"
-        android:paddingTop="@dimen/dimen_30dp"
-        android:text="麦克风"
-        android:textColor="@color/color_26"
-        android:textSize="@dimen/dimen_14sp"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/tv_camera"
-        app:layout_constraintStart_toEndOf="@id/tv_video"
-        tools:ignore="UseCompatTextViewDrawableXml" />
-
-    <TextView
-        android:id="@+id/tv_camera"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/dimen_45dp"
-        android:drawableTop="@drawable/svg_icon_camera"
-        android:drawablePadding="@dimen/dimen_8dp"
-        android:gravity="center"
-        android:paddingTop="@dimen/dimen_30dp"
-        android:text="相机"
-        android:textColor="@color/color_26"
-        android:textSize="@dimen/dimen_14sp"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/tv_beautify"
-        app:layout_constraintStart_toEndOf="@id/tv_audio"
-        tools:ignore="UseCompatTextViewDrawableXml" />
-
-    <TextView
-        android:id="@+id/tv_beautify"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/dimen_45dp"
-        android:drawableTop="@mipmap/icon_beautify"
-        android:drawablePadding="@dimen/dimen_8dp"
-        android:gravity="center"
-        android:paddingTop="@dimen/dimen_30dp"
-        android:text="美颜"
-        android:textColor="@color/color_26"
-        android:textSize="@dimen/dimen_14sp"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/tv_hand_cancel"
-        app:layout_constraintStart_toEndOf="@id/tv_camera"
-        tools:ignore="UseCompatTextViewDrawableXml" />
-
-    <TextView
-        android:id="@+id/tv_hand_cancel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/dimen_45dp"
-        android:drawableTop="@drawable/svg_icon_hand_pic"
-        android:drawablePadding="@dimen/dimen_8dp"
-        android:gravity="center"
-        android:paddingTop="@dimen/dimen_30dp"
-        android:text="下麦"
-        android:textColor="@color/color_26"
-        android:textSize="@dimen/dimen_14sp"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/tv_beautify"
-        tools:ignore="UseCompatTextViewDrawableXml" />
-
-
+        app:layout_constraintBottom_toBottomOf="parent">
+        <TextView
+            android:id="@+id/tv_stream_mirror"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableTop="@drawable/icon_mirror_selected"
+            android:drawablePadding="@dimen/dimen_8dp"
+            android:gravity="center"
+            android:paddingTop="@dimen/dimen_30dp"
+            android:text="流镜像"
+            android:textColor="@color/color_26"
+            android:textSize="@dimen/dimen_14sp"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/tv_mirror"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:ignore="UseCompatTextViewDrawableXml" />
+        <TextView
+            android:id="@+id/tv_mirror"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableTop="@drawable/icon_perview_mirror"
+            android:drawablePadding="@dimen/dimen_8dp"
+            android:gravity="center"
+            android:paddingTop="@dimen/dimen_30dp"
+            android:text="镜像"
+            android:textColor="@color/color_26"
+            android:textSize="@dimen/dimen_14sp"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/tv_beautify"
+            app:layout_constraintStart_toEndOf="@id/tv_stream_mirror"
+            tools:ignore="UseCompatTextViewDrawableXml" />
+        <TextView
+            android:id="@+id/tv_beautify"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableTop="@mipmap/icon_beautify"
+            android:drawablePadding="@dimen/dimen_8dp"
+            android:gravity="center"
+            android:paddingTop="@dimen/dimen_30dp"
+            android:text="美颜"
+            android:textColor="@color/color_26"
+            android:textSize="@dimen/dimen_14sp"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/tv_mirror"
+            tools:ignore="UseCompatTextViewDrawableXml" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
