--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/values/styles.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/values/styles.xml
@@ -30,6 +30,13 @@
         <item name="android:button">@drawable/check_box_selector1</item>
     </style>
 
+    <style name="VHCheckBox1" parent="Theme.AppCompat.Light">
+        <item name="android:textSize">@dimen/dimen_12sp</item>
+        <item name="android:textColor">@color/color_22</item>
+        <item name="android:button">@drawable/check_box_selector2</item>
+    </style>
+
+
     <!--底部弹出dialog使用-->
     <style name="DialogBottomInAndOutStyle">
         <item name="android:windowEnterAnimation">@null</item>
