--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/item_chat_list.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/item_chat_list.xml
@@ -40,7 +40,7 @@
 
     <RelativeLayout
         android:id="@+id/rl"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dimen_8dp"
         android:layout_marginTop="@dimen/dimen_6dp"
@@ -54,7 +54,7 @@
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toEndOf="@id/iv_avatar"
         app:layout_constraintTop_toBottomOf="@id/tv_name"
-        app:layout_constraintWidth_default="wrap">
+        app:layout_constrainedWidth="true">
 
         <TextView
             android:id="@+id/tv_or_text"
