--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/item_goods.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/item_goods.xml
@@ -44,7 +44,7 @@
 
     <TextView
         android:id="@+id/tv_name"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dimen_10dp"
         android:layout_marginEnd="@dimen/dimen_10dp"
@@ -59,11 +59,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintWidth_default="wrap"/>
+        app:layout_constrainedWidth="true"/>
 
     <TextView
         android:id="@+id/tv_description"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dimen_10dp"
         android:layout_marginEnd="@dimen/dimen_10dp"
@@ -78,7 +78,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintWidth_default="wrap"/>
+        app:layout_constrainedWidth="true"/>
 
     <TextView
         android:id="@+id/tv_label"
