--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/fragment_watch_live.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/res/layout/fragment_watch_live.xml
@@ -17,6 +17,11 @@
         android:background="@drawable/bg_watch_shape"
         app:layout_constraintBottom_toBottomOf="parent" />
 
+    <master.flame.danmaku.ui.widget.DanmakuView
+        android:id="@+id/sv_danmaku"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
     <ImageView
         android:id="@+id/iv_loading"
         android:layout_width="@dimen/dimen_60dp"
